--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,10 @@
 {
-"code-runner.runInTerminal": true, // 设置成false会在“输出”中输出，无法输入
+    "code-runner.runInTerminal": true, // 设置成false会在“输出”中输出，无法输入
     "code-runner.executorMap": {
-        "c": "cd $dir && gcc '$fileName' -o C:/Users/Monotony/Desktop/cpp/exe/$fileNameWithoutExt.exe -Wall -g -Og -static-libgcc -std=c11 && C:/Users/Monotony/Desktop/cpp/exe/$fileNameWithoutExt.exe",
-        "cpp": "cd $dir && g++ '$fileName' -o C:/Users/Monotony/Desktop/cpp/exe/$fileNameWithoutExt.exe -Wall -g -Og -static-libgcc -std=c++17 && C:/Users/Monotony/Desktop/cpp/exe/$fileNameWithoutExt.exe"
-        // "c": "cd $dir && gcc '$fileName' -o $direxe\\$fileNameWithoutExt.exe -Wall -g -Og -static-libgcc -std=c11 && $direxe\\$fileNameWithoutExt.exe",
-        // "cpp": "cd $dir && g++ '$fileName' -o $direxe\\$fileNameWithoutExt.exe -Wall -g -Og -static-libgcc -std=c++17 && $direxe\\$fileNameWithoutExt.exe"
-        // "c": "cd $dir && gcc $fileName -o C:/Users/Monotony/Desktop/cpp/exe/$fileNameWithoutExt.exe -Wall -g -Og -static-libgcc -std=c11 && C:/Users/Monotony/Desktop/cpp/exe/$fileNameWithoutExt.exe",
-        // "cpp": "cd $dir && g++ $fileName -o C:/Users/Monotony/Desktop/cpp/exe/$fileNameWithoutExt.exe -Wall -g -Og -static-libgcc -std=c++17 && C:/Users/Monotony/Desktop/cpp/exe/$fileNameWithoutExt.exe"
+        "c": "gcc '$fileName' -o './exe/$fileNameWithoutExt.exe' -Wall -O2 -m64 -lm -static-libgcc -std=c11 -fexec-charset=GBK && &'./exe/$fileNameWithoutExt.exe'",
+        "cpp": "g++ '$fileName' -o './exe/$fileNameWithoutExt.exe' -Wall -O2 -m64 -static-libgcc -std=c++14 -fexec-charset=GBK && &'./exe/$fileNameWithoutExt.exe'",
+        // "c": "gcc $fileName -o $fileNameWithoutExt.exe -Wall -O2 -m64 -lm -static-libgcc -std=c11 -fexec-charset=GBK && $dir$fileNameWithoutExt.exe",
+        // "cpp": "g++ $fileName -o $fileNameWithoutExt.exe -Wall -O2 -m64 -static-libgcc -std=c++14 -fexec-charset=GBK && $dir$fileNameWithoutExt.exe"
     }, // 控制code runner命令；未注释的仅适用于PowerShell（Win10默认），注释掉的适用于cmd（win7默认）
     "code-runner.saveFileBeforeRun": true, // run code前保存
     "code-runner.preserveFocus": true, // 若为false，run code后光标会聚焦到终端上。如果需要频繁输入数据可设为false
@@ -64,4 +62,3 @@
         "valarray": "cpp"
     }, // 默认为false，效果是鼠标选中一块代码后可以单独执行，但C是编译型语言，不适合这样用
 }
-
